--- a/src/styles/endsars.css
+++ b/src/styles/endsars.css
@@ -13,7 +13,7 @@
     margin: 0;
     padding-top: 4rem;
     font: 1rem/1.5 -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color: rgb(246,254,254);
+    background-color: #f6fefe;
 }
 
 .page__logo {
@@ -25,7 +25,7 @@
 .page__description {
     text-align: center;
     margin: 0 2rem 0.5rem;
-    color: rgb(103,137,116);
+    color: #678974;
 }
 
 .page__nav {
@@ -77,7 +77,7 @@
     padding: 0.2rem 1rem 0.1rem;
     border-radius: 0.3rem;
     text-decoration: none;
-    color: rgb(58,77,73);
+    color: #3a4d49;
 
     margin: 0 0.5rem;
 }
@@ -96,15 +96,15 @@
 
 
 .nav__item_pinkish-bg {
-    background-color: rgb(254,228,229);
+    background-color: #fee4e5;
 }
 
 .nav__item_greenish-bg {
-    background-color: rgb(207,249,227);
+    background-color: #cff9e3;
 }
 
 .nav__item_orangish-bg {
-    background-color: rgb(253,237,211);
+    background-color: #fdedd3;
 }
 
 
@@ -149,7 +149,7 @@
     background-color: #f0f0f0;
     padding: 0.25rem 1rem;
     color: white;
-    background-color: rgb(103,137,116);
+    background-color: #678974;
 }
 
 .entry__details {
